build_after_hud_fix.txt
[  1%] Built target glad-generate-files
[ 41%] Built target glfw
[ 46%] Built target glad
[ 60%] Built target raylib
[ 63%] Building CXX object CMakeFiles/blacknode.dir/src/ui/HUD.cpp.o
[ 63%] Building CXX object CMakeFiles/blacknode.dir/src/net/ControlSender.cpp.o
/home/pc/Avant-Garde/Avant-Garde-1/src/net/ControlSender.cpp: In member function ‘void ControlSender::sendReticle(float, float, int)’:
/home/pc/Avant-Garde/Avant-Garde-1/src/net/ControlSender.cpp:31:5: warning: this ‘if’ clause does not guard... [-Wmisleading-indentation]
   31 |     if (nx < 0.0f) nx = 0.5f; if (ny < 0.0f) ny = 0.5f;
      |     ^~
/home/pc/Avant-Garde/Avant-Garde-1/src/net/ControlSender.cpp:31:31: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   31 |     if (nx < 0.0f) nx = 0.5f; if (ny < 0.0f) ny = 0.5f;
      |                               ^~
[ 65%] Linking CXX shared library libblacknode.so
[ 96%] Built target blacknode
[ 98%] Building CXX object CMakeFiles/blacknode_app.dir/src/main_app.cpp.o
/home/pc/Avant-Garde/Avant-Garde-1/src/main_app.cpp: In lambda function:
/home/pc/Avant-Garde/Avant-Garde-1/src/main_app.cpp:69:41: error: ‘glm::vec2 GLRenderer::worldToScreen(const glm::vec3&)’ is private within this context
   69 |         auto screen = rend.worldToScreen(pos);
      |                       ~~~~~~~~~~~~~~~~~~^~~~~
In file included from /home/pc/Avant-Garde/Avant-Garde-1/src/main_app.cpp:5:
/home/pc/Avant-Garde/Avant-Garde-1/src/render/GLRenderer.h:51:15: note: declared private here
   51 |     glm::vec2 worldToScreen(const glm::vec3 &world);
      |               ^~~~~~~~~~~~~
gmake[2]: *** [CMakeFiles/blacknode_app.dir/build.make:76: CMakeFiles/blacknode_app.dir/src/main_app.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:266: CMakeFiles/blacknode_app.dir/all] Error 2
gmake: *** [Makefile:156: all] Error 2
